--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "firebase": "^11.1.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.468.0",
-    "next": "^15.1.0",
+    "next": "16.1.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "recharts": "^3.7.0"
@@ -26,7 +26,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.1.0",
+    "eslint-config-next": "16.1.6",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
